<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tasktxt_01.EditTextActivity"
    tools:ignore="MergeRootFrame" >
    
   
        <LinearLayout 
   		android:id="@+id/edittextlinerlayout"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<!-- 第一层 -->
 		<RelativeLayout
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >
            
 		<Button 
            android:id="@+id/save" 
            android:layout_width="100pt" 
            android:layout_height="65pt" 
            android:layout_alignParentRight="true"
            android:textSize="25pt"
            android:text="@string/save" />

 		 
 		 <EditText 
 		    android:id="@+id/user2" 
 		    android:layout_width="250pt" 
            android:layout_height="65pt" 
            android:layout_alignParentLeft = "true"
            android:textSize="40pt"
 		     />
        </RelativeLayout>
        <!-- 第二层 -->
         <RelativeLayout
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >
            
 		  <TextView 
 		    android:id="@+id/sex2" 
 		    android:layout_width="140pt" 
            android:layout_height="65pt" 
            android:gravity="center_vertical"
            android:layout_alignParentLeft = "true"
            android:textSize="25pt"
            android:text="@string/sex"
 		  />
 		 
 		 <EditText
 		    android:id="@+id/sexedit" 
 		    android:layout_width="100pt" 
            android:layout_height="65pt" 
            android:gravity="center"
            android:layout_toRightOf="@id/sex2"
            android:textSize="25pt" />
        </RelativeLayout>
 		<!-- 第三层 -->
         <RelativeLayout
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >
            
 		  <TextView 
 		    android:id="@+id/job2" 
 		    android:layout_width="140pt" 
            android:layout_height="65pt" 
            android:gravity="center_vertical"
            android:layout_alignParentLeft = "true"
            android:textSize="25pt"
            android:text="@string/job"
 		  />
 		 
 		 <EditText
 		    android:id="@+id/jobedit" 
 		    android:layout_width="300pt" 
            android:layout_height="65pt" 
            android:gravity="center"
            android:layout_toRightOf="@id/job2"
            android:textSize="25pt"
       
 		  />
        </RelativeLayout>
        <!-- 第四层 -->
 		 <RelativeLayout
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >
            
 		  <TextView
 		    android:id="@+id/phone2" 
 		    android:layout_width="140pt" 
            android:layout_height="65pt" 
            android:gravity="center_vertical"
            android:layout_alignParentLeft = "true"
            android:textSize="25pt"
            android:text="@string/phone"
 		  />
 		 
 		 <EditText
 		    android:id="@+id/phoneedit" 
 		    android:layout_width="300pt" 
            android:layout_height="65pt" 
            android:gravity="center"
            android:layout_toRightOf="@id/phone2"
            android:textSize="25pt"
           
 		  />
        </RelativeLayout>
         <!-- 第五层 -->
         <RelativeLayout
        	android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >
            
 		  <TextView 
 		    android:id="@+id/terr2" 
 		    android:layout_width="140pt" 
            android:layout_height="65pt" 
            android:gravity="center_vertical"
            android:layout_alignParentLeft = "true"
            android:textSize="25pt"
            android:text="@string/terr"
 		  />
 		 
 		 <EditText
 		    android:id="@+id/terredit" 
 		    android:layout_width="300pt" 
            android:layout_height="65pt" 
            android:gravity="center"
            android:layout_toRightOf="@id/terr2"
            android:textSize="25pt"
            
 		  />
        </RelativeLayout>

        
        
    </LinearLayout>

</FrameLayout>